--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <head>
     <title>Learning Sass</title>
   </head>
+
   <body>
-    <h1>
-      <a href="#">hello</a>
-    </h1>
+    <h1>this is an h1</h1>
+    <a href="#">this is an anchor tag</a>
+    <p class="error">this is an error</p>
+    <p class="notification">this is a notification</p>
+    <button>Click me</button>
   </body>
 </html>
